@@ -16,6 +16,10 @@ LanguageTool Change Log
 -French:
     -added/improved several rules
 
+-German:
+    -fixed false alarm for words like "Stil-" in phrases like "Stil- und 
+     Grammatikprüfung" (issue #93)
+
 -Polish:
     -added/improved many rules
     -improved disambiguation
